recursion.hanoi.lessons.recursion.hanoi.SplitHanoi2.scala.error
SplitHanoi2:24: error: illegal start of simple expression
  splitHanoi(height, , src, other, dst1, dst2)
                     ^SplitHanoi2:25: error: ')' expected but '}' found.
}
^