recursion.hanoi.lessons.recursion.hanoi.SplitHanoi2.scala.code
def hanoi(height:Int, src:Int, other:Int, dst:Int) {
  if (height >= 1) {
    if (height == 1) 
      move(src, dst)
    else {
      hanoi(height-1, src, dst, other)
      move(src, dst)
      hanoi(height-1, other, src, dst)
    }
  }
}


def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
    if (height > 1)
  		splitHanoi(height-1, src, dst1, dst2, other)
  	move(src, dst1)
  	hanoi(height-1, dst2, src, dst1)
  	move(src, dst2)
  	hanoi(height-1, other, src, dst2)	
	
  
  splitHanoi(height, , src, other, dst1, dst2)
}

/*
def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
  def aux(height:Int, p:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
    
  	move(src, dst1)
  	hanoi(p, dst2, src, dst1)
  	move(src, dst2)
  	hanoi(p, other, src, dst2)	
    if (height > 1)
  		aux(height-1, p+1, src, dst2, other, dst1)
	}
  
  aux(height, 0 , src, other, dst1, dst2)
}
*/